--- a/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Index.cshtml
+++ b/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Index.cshtml
@@ -14,8 +14,14 @@
             <th>
                 Name
             </th>
-            <th >
+            <th>
+                Secondary Name
+            </th>
+            <th>
                 Description
+            </th>
+            <th>
+                Secondary Description
             </th>
             <th>
                 Price
@@ -49,7 +55,13 @@
                     @meal.Name
                 </td>
                 <td>
+                    @meal.SecondaryName
+                </td>
+                <td>
                     @meal.Description
+                </td>
+                <td>
+                    @meal.SecondaryDescription
                 </td>
                 <td>
                     @meal.Price
