--- a/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Details.cshtml
+++ b/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Details.cshtml
@@ -24,6 +24,12 @@
                 @Model.Name
             </dd>
             <dt class="col-sm-2">
+                <label asp-for="@Model.SecondaryName"></label>
+            </dt>
+            <dd class="col-sm-10">
+                @Model.SecondaryName
+            </dd>
+            <dt class="col-sm-2">
                 <label asp-for="@Model.Price"></label>
             </dt>
             <dd class="col-sm-10">
@@ -34,6 +40,12 @@
             </dt>
             <dd class="col-sm-10">
                 @Model.Description
+            </dd>
+            <dt class="col-sm-2">
+                <label asp-for="@Model.SecondaryDescription"></label>
+            </dt>
+            <dd class="col-sm-10">
+                @Model.SecondaryDescription
             </dd>
             <dt class="col-sm-2">
                 <label asp-for="@Model.Category.Name"></label>
