--- a/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Edit.cshtml
+++ b/Web/AdminDashboard/AdminDashboard.Web/Views/Meal/Edit.cshtml
@@ -24,9 +24,19 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="SecondaryName"></label>
+            <input asp-for="SecondaryName" class="form-control" />
+            <span asp-validation-for="SecondaryName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="Description"></label>
             <textarea asp-for="Description" class="form-control" rows="5"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="SecondaryDescription"></label>
+            <textarea asp-for="SecondaryDescription" class="form-control" rows="5"></textarea>
+            <span asp-validation-for="SecondaryDescription" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Price"></label>
