--- a/Web/Restaurant.Web/Views/Reservation/Book.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Book.cshtml
@@ -66,11 +66,11 @@
                         <div class="col-md-6">
                             <div class="form-floating">
                                 <select asp-for="NumberOfPeople" class="form-select">
-                                    <option value="2">@L["TWO"] @L["PEOPLE"]</option>
-                                    <option value="3">@L["THREE"] @L["PEOPLE"]</option>
-                                    <option value="4">@L["FOUR"] @L["PEOPLE"]</option>
-                                    <option value="5">@L["FIVE"] @L["PEOPLE"]</option>
-                                    <option value="6">@L["SIX"] @L["PEOPLE"]</option>
+                                    <option value="2">@L["TWO"] @SL["PEOPLE"]</option>
+                                    <option value="3">@L["THREE"] @SL["PEOPLE"]</option>
+                                    <option value="4">@L["FOUR"] @SL["PEOPLE"]</option>
+                                    <option value="5">@L["FIVE"] @SL["PEOPLE"]</option>
+                                    <option value="6">@L["SIX"] @SL["PEOPLE"]</option>
                                 </select>
                                 <label asp-for=NumberOfPeople>@L["NUMBER_OF_PEOPLE"]</label>
                             </div>
