Bug fix - language selection
Changed the select language partial view to include the query string in the return url, if it is present

--- a/Web/Restaurant.Web/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_SelectLanguagePartial.cshtml
@@ -9,7 +9,9 @@
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
     var cultureItems = LocOptions.Value.SupportedUICultures;
     var changeCultureString = cultureItems.FirstOrDefault(cultureInfo => cultureInfo.Name != requestCulture.RequestCulture.Culture.Name);
-    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
+    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) 
+        ? "~/" 
+        : $"~{Context.Request.Path.Value}{Context.Request.QueryString.Value ?? string.Empty}";
 }
 
 <div>
